index build continues to enforce constraints after failing over from primary to secondary

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-11-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Indexing constraints are currently determined (enforced on primary; relaxed on secondary) at the start of an index build and stay intact throughout the life of an index build. With SERVER-44186, index builds are allowed to continue running in the background as a node steps down from primary to secondary. For unique indexes, inserting duplicate keys while the index build is in progress, this may cause the index builds to fail unexpectedly on the downgraded secondary.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: