SERVER-44397 two phase index builds with unique indexes do not fail over on stepdown